--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -6,15 +6,19 @@
 <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
+
 <nav>
-	<span>Smart Contact Manager</span>
-    
-    
-    <a href="#login">Login</a>
-    <a href="#signup">Signup</a>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
+	<span>SMART CONTACT MANAGER</span>
+    <a href="#login">LOGIN</a>
+    <a th:href="@{/signup}">SIGNUP</a>
+    <a href="#home">HOME</a>
+    <a href="#about">ABOUT</a>
 </nav>
 
+<h2>SMART CONTACT MANAGER</h2>
+<p>
+We dont want tot push our ideas on to customers , we simply want to make what they want 
+</p>
+<input type="button" value="Get Started">
 </body>
 </html>
