--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -12,9 +12,11 @@ body {
 }
 
 .container {
-	max-width: 500px;
-	width: 100%;
-	 margin: 0px 0px 60px 400px;
+	max-width: 450px;
+	/*max-height: 200px;*/
+	/*width: 10%;*/
+	margin: 0px 0px 60px 400px;
+	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 }
 
 form {
@@ -27,15 +29,21 @@ form {
 label {
 	display: block;
 	margin-bottom: 8px;
-	font-weight : bold;
+	font-weight: bold;
 }
 
 input, textarea {
+	flex: 1;
 	width: 100%;
 	padding: 10px;
 	margin-bottom: 16px;
+	margin-bottom: 7px;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
+	border: none;
+	border-bottom: 3px solid #ccc;
+	border-left: 3px solid #ccc;
+	font-style: italic;
+	/*background-color: transparent;*/
 	border-radius: 4px;
 }
 
@@ -45,10 +53,34 @@ input[type="submit"] {
 	cursor: pointer;
 }
 
+
+.input-container input[type="checkbox"] {
+    margin-right : 80px;
+}
+
+.input-container label {
+    margin-left: 8px; /* Adjust the margin as needed */
+}
+
+.input-container label,
+.input-container input[type="checkbox"] {
+    flex-shrink: 0; /* Prevent checkbox and label from shrinking */
+}
+
+/*input[type="checkbox"] {
+			display: inline-block;
+			align-items : left;
+            margin-right: 200px;
+            
+        }*/
 input[type="submit"]:hover {
 	background-color: #45a049;
 }
 
+.input-container label {
+    display: inline-block;
+    margin-left: 80px; /* Adjust the margin as needed */
+}
 nav {
 	background-color: #EC8565;
 	overflow: hidden;
@@ -62,6 +94,10 @@ nav span {
 	font-size: 18px; /* Adjust the font size as needed */
 }
 
+h2 {
+	text-align: center;
+}
+
 nav a {
 	float: right;
 	display: block;
@@ -70,6 +106,7 @@ nav a {
 	padding: 14px 16px;
 	text-decoration: none;
 }
+
 nav a:hover {
 	background-color: #EF2632;
 	color: black;
