--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thymeleaf Registration Page</title>
-    <link rel="stylesheet" th:href="@{/css/style1.css}">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Thymeleaf Registration Page</title>
+<link rel="stylesheet" th:href="@{/css/style1.css}">
 </head>
 <body>
-<nav>
-	<span>SMART CONTACT MANAGER</span>
-    
-    
-    <a href="#login">LOGIN</a>
-    <a th:href="@{/signup}">SIGNUP</a>
-    <a href="#home">HOME</a>
-    <a href="#about">ABOUT</a>
-</nav>
+	<nav>
+		<span>SMART CONTACT MANAGER</span> <a href="#login">LOGIN</a> <a
+			th:href="@{/signup}">SIGNUP</a> <a th:href="@{/base}">HOME</a> <a
+			href="#about">ABOUT</a>
+	</nav>
 
 
-<div class="container">
+	<div class="container">
 
-		<h2>REGISTER HERE</h2>
-		
-    <form th:action="@{/register}" method="post">
-        <label for="name">NAME </label>
-        <input type="text" id="name" name="name" placeholder="enter here" required>
+		<h2>FILL ALL DETAILS CORRECTLY...</h2>
 
-        <label for="email">EMAIL </label>
-        <input type="email" id="email" name="email" placeholder="enter here" required>
+		<form th:action="@{/register}" method="post">
+			<label for="name">NAME </label> <input type="text" id="name"
+				name="name" placeholder="enter your name" required> <label
+				for="email">EMAIL </label> <input type="email" id="email"
+				name="email" placeholder="enter your email" required> <label
+				for="password">PASSWORD </label> <input type="password"
+				id="password" name="password" placeholder="enter your password"
+				required> <label for="about">ABOUT </label>
+			<textarea id="about" name="about" placeholder="enter about yourself"
+				rows="4"></textarea>
 
-        <label for="password">PASSWORD </label>
-        <input type="password" id="password" name="password" placeholder="enter here" required>
+			<div class="input-container">
+            <input type="checkbox" id="acceptTerms" name="acceptTerms" required>
+             <label for="acceptTerms">I accept the terms and conditions</label>
+        	</div>
 
-        <label for="about">ABOUT </label>
-        <textarea id="about" name="about" placeholder="enter here" rows="4"></textarea>
-
-        <input type="submit" value="Register">
-    </form>
-</div>
+				<input type="submit" value="Register"> 
+				<input type="reset" value="Reset">
+		</form>
+	</div>
 
 </body>
 </html>
