--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -18,15 +18,17 @@
 
 		<h2>FILL ALL DETAILS CORRECTLY...</h2>
 
-		<form th:action="@{/register}" method="post">
-			<label for="name">NAME </label> <input type="text" id="name"
-				name="name" placeholder="enter your name" required> <label
-				for="email">EMAIL </label> <input type="email" id="email"
-				name="email" placeholder="enter your email" required> <label
-				for="password">PASSWORD </label> <input type="password"
-				id="password" name="password" placeholder="enter your password"
-				required> <label for="about">ABOUT </label>
-			<textarea id="about" name="about" placeholder="enter about yourself"
+		<form th:action="@{/register}" method="post" th:object="${user}">
+			<label for="name">NAME </label> 
+			<input th:value="${user.name}" type="text" id="name"
+				name="name" placeholder="enter your name" required> 
+				<label for="email">EMAIL </label> 
+				<input th:value="${user.email}" type="email" id="email" name="email" placeholder="enter your email" required> 
+				<label for="password">PASSWORD </label>
+				<input type="password" id="password" name="password" placeholder="enter your password"
+				required> 
+				<label for="about">ABOUT </label>
+				<textarea th:value="${user.about}" id="about" name="about" placeholder="enter about yourself"
 				rows="4"></textarea>
 
 			<div class="input-container">
