--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -9,7 +9,7 @@
 
 <nav>
 	<span>SMART CONTACT MANAGER</span>
-    <a href="#login">LOGIN</a>
+    <a th:href="@{login}">LOGIN</a>
     <a th:href="@{/signup}">SIGNUP</a>
     <a href="#home">HOME</a>
     <a href="#about">ABOUT</a>
