--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<nav>
-		<span>SMART CONTACT MANAGER</span> <a href="#login">LOGIN</a> <a
+		<span>SMART CONTACT MANAGER</span> <a th:href="@{login}">LOGIN</a> <a
 			th:href="@{/signup}">SIGNUP</a> <a th:href="@{/base}">HOME</a> <a
 			href="#about">ABOUT</a>
 	</nav>
