--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
+
 <title>Insert title here</title>
-<link rel="stylesheet" th:href="@{/css/style.css}">
+<!--  <link rel="stylesheet" th:href="@{/css/style.css}">-->
+
+<link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
 
@@ -17,7 +19,7 @@
 
 <h2>SMART CONTACT MANAGER</h2>
 <p>
-We dont want tot push our ideas on to customers , we simply want to make what they want 
+We dont want to push our ideas on to customers , we simply want to make what they want 
 </p>
 <input type="button" value="Get Started">
 </body>
