--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,8 +24,8 @@
     
     
     <form th:action="@{/login}" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="username">Email:</label>
+        <input type="email" id="username" name="username" required>
         
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
