--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -21,6 +21,8 @@
 <p>
 We dont want to push our ideas on to customers , we simply want to make what they want 
 </p>
-<input type="button" value="Get Started">
+<a th:href="@{/signup}">
+<input type="button" value="Get Started"></a>
+
 </body>
 </html>
