--- a/src/main/resources/templates/user_dashboard.html
+++ b/src/main/resources/templates/user_dashboard.html
@@ -10,11 +10,13 @@
 
 <nav>
 	<span>SMART CONTACT MANAGER</span>
-    <a th:href="@{login}">LOGIN</a>
+    <!--  <a th:href="@{/login}">LOGIN</a>
     <a th:href="@{/signup}">SIGNUP</a>
     <a href="#home">HOME</a>
-    <a href="#about">ABOUT</a>
+    <a href="#about">ABOUT</a>-->
     <a href="/logout" >LOGOUT</a>
+    <span th:text="${userdetails.name}" class="user-name">John Doe</span>
+    
     
 </nav>
 
@@ -23,7 +25,8 @@
 
      Logout Form 
     <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Logout">
+        <input type="submit" value="Logout">S
     </form>-->
+    
 </body>
 </html>
