--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -10,11 +10,12 @@
 
 <nav>
 	<span>SMART CONTACT MANAGER</span>
-    <a th:href="@{login}">LOGIN</a>
+  <!--    <a th:href="@{login}">LOGIN</a>
     <a th:href="@{/signup}">SIGNUP</a>
     <a href="#home">HOME</a>
-    <a href="#about">ABOUT</a>
+    <a href="#about">ABOUT</a>-->
     <a href="/logout" >LOGOUT</a>
+    <span th:text="${userdetails.name}" class="user-name">hey</span>
     
 </nav>
 
