--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
 
 <div class="container">
-    <h2>Login</h2>
+    <h2>LOGIN</h2>
     
     <!-- Display error message if login fails 
     <div th:if="${error}" class="error-message">
@@ -41,15 +41,20 @@
     </div>
 </div>
 	
-    
+    <div th:if="${param.logout}">
+			<div class="logout-message">
+			<p>Logout successfull</p>
+			</div>
+			</div>
+			
     <form th:action="@{/login}" method="post">
-        <label for="username">Email:</label>
-        <input type="email" id="username" name="username" required>
+        <label for="username">EMAIL</label>
+        <input type="email" id="username" name="username" placeholder="enter your email" required>
         
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <label for="password">PASSWORD</label>
+        <input type="password" id="password" name="password" placeholder="enter your password" required>
         
-        <input type="submit" value="Login">
+        <input type="submit" value="LOGIN">
     </form>
 </div>
 
