--- a/src/main/resources/templates/user_dashboard.html
+++ b/src/main/resources/templates/user_dashboard.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Dashboard</title>
     <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
+    <link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -16,11 +18,27 @@
     <a href="#about">ABOUT</a>-->
     <a href="/logout" >LOGOUT</a>
     <span th:text="${userdetails.name}" class="user-name">John Doe</span>
+    </nav>
     
+    <div class="sidebar">
+    <span class="close-btn" onclick="toggleSidebar()">×</span>
+    <a href="#" class="item"><i class="fa-solid fa-house"></i> HOME </a>
+    <a href="#" class="item"> <i class="fa-solid fa-address-book"></i> VIEW CONTACTS </a>
+    <a href="#" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
+    <a href="#" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE </a>
+    <a href="#" class="item"><i class="fa-solid fa-gear"></i> SETTINGS </a>
+    </div>
     
-</nav>
+	
+	 <div class="content">
+	 
+	 <i onclick="toggleSidebar()" class="fa-solid fa-bars pointer-cursor"></i>
+	 <h2>Welcome to the User Dashboard!</h2>
+	  <!--  <button onclick="toggleSidebar()">Toggle Sidebar</button> -->
+ 
+	</div>
 
-    <h2>Welcome to the User Dashboard!</h2>
+    
     <!--<p>Here, you can see admin-specific content.</p>
 
      Logout Form 
@@ -28,5 +46,6 @@
         <input type="submit" value="Logout">S
     </form>-->
     
+    <script src="/user/js/script.js"></script>
 </body>
 </html>
