--- a/src/main/resources/templates/admin/add_contacts_admin.html
+++ b/src/main/resources/templates/admin/add_contacts_admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Insert title here</title>
+<title>Admin Add contacts </title>
 <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
 <link rel="stylesheet" 
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -24,9 +24,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     
     <div class="sidebar">
     <span class="close-btn" onclick="toggleSidebar()">×</span>
-    <a href="#" class="item"><i class="fa-solid fa-house"></i> HOME </a>
+    <a href="#" th:href="@{/admin/dashboard}" class="item"><i class="fa-solid fa-house"></i> HOME </a>
     <a href="#" class="item"> <i class="fa-solid fa-address-book"></i> VIEW CONTACTS </a>
-    <a href="#" th:href="@{/user/add-contacts}" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
+    <a href="#" th:href="@{/admin/add-contacts}" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
     <a href="#" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE </a>
     <a href="#" class="item"><i class="fa-solid fa-gear"></i> SETTINGS </a>
     </div>
@@ -39,10 +39,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 	   <button onclick="toggleSidebar()">Toggle Sidebar</button> -->
  
 	</div>
-	<h2> add contacts here </h2>
+	<h2> add contacts here admin</h2>
 	
 
 
-<script src="/user/js/script.js"></script>
+<script src="/admin/js/script.js"></script>
 </body>
 </html>
