--- a/src/main/resources/templates/admin/add_contacts_admin.html
+++ b/src/main/resources/templates/admin/add_contacts_admin.html
@@ -26,7 +26,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     <span class="close-btn" onclick="toggleSidebar()">×</span>
     <a href="#" th:href="@{/admin/dashboard}" class="item"><i class="fa-solid fa-house"></i> HOME </a>
     <a href="#" class="item"> <i class="fa-solid fa-address-book"></i> VIEW CONTACTS </a>
-    <a href="#" th:href="@{/admin/add-contacts}" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
+    <a href="#" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
     <a href="#" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE </a>
     <a href="#" class="item"><i class="fa-solid fa-gear"></i> SETTINGS </a>
     </div>
@@ -39,7 +39,39 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 	   <button onclick="toggleSidebar()">Toggle Sidebar</button> -->
  
 	</div>
-	<h2> add contacts here admin</h2>
+	
+	<div class="container">
+        <h3>ADD CONTACTS HERE</h3>
+
+        <form th:action="@{/submit}" method="post" enctype="multipart/form-data">
+
+            <label for="name">NAME</label>
+            <input type="text" id="name" name="name" required><br>
+
+            <label for="phone">PHONE</label>
+            <input type="tel" id="phone" name="phone" required><br>
+
+            <label for="description">DESCRIPTION</label>
+            <textarea id="description" name="description" rows="4" cols="50" required></textarea><br>
+
+            <label for="nickname">NICKNAME</label>
+            <input type="text" id="nickname" name="nickname"><br>
+
+            <label for="work">WORK</label>
+            <input type="text" id="work" name="work"><br>
+
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" name="email" required><br>
+
+            <label for="image">IMAGE</label>
+            <input type="file" id="image" name="image"><br>
+
+            <input type="submit" value="SUBMIT">
+            <input type="reset" value="RESET">
+
+        </form>
+    </div>
+	
 	
 
 
