--- a/src/main/resources/templates/user/contact-status.html
+++ b/src/main/resources/templates/user/contact-status.html
@@ -17,7 +17,7 @@
     <script>
         // Redirect to the original page after a delay (adjust the delay as needed)
         setTimeout(function () {
-            window.location.href = "/admin/add-contacts";
+            window.location.href = "/user/add-contacts";
         }, 3000);
     </script>
 </body>
