--- a/src/main/resources/templates/user/add_contacts_user.html
+++ b/src/main/resources/templates/user/add_contacts_user.html
@@ -39,7 +39,48 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 	   <button onclick="toggleSidebar()">Toggle Sidebar</button> -->
  
 	</div>
-	<h2> add contacts here User</h2>
+	<div class="container">
+        <h3>ADD CONTACTS HERE</h3>
+	
+	
+		 <div class="message" th:if="${successMessage != null}">
+ 			<span th:text = "${successMessage}"></span>
+    	</div>
+    
+    	<div class="message" th:if="${errorMessage != null}">
+ 			<span th:text = "${errorMessage}"></span>
+    	</div>   
+		
+		
+        <form th:action="@{/user/process-contact}" method="post" th:object="${contact}" enctype="multipart/form-data">
+
+            <label for="name">NAME</label>
+            <input type="text" id="name" name="name" placeholder="enter your name" required><br>
+
+            <label for="phone">PHONE</label>
+           <input type="tel" id="phone" name="phone" placeholder="enter your phone number" required><br>
+
+
+            <label for="nickname">NICKNAME</label>
+            <input type="text" id="nickname" name="nickname" placeholder="enter your nickname" required><br>
+
+            <label for="work">WORK</label>
+            <input type="text" id="work" name="work" placeholder="enter your work" required><br>
+
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" name="email" placeholder="enter your email" required><br>
+            
+            <label for="description">DESCRIPTION</label>
+            <textarea id="description" name="description" rows="8" cols="50" placeholder="enter your description" required></textarea><br>
+
+           <!--   <label for="image">IMAGE</label>
+            <input type="file" id="image" name="image"><br>-->
+
+            <input type="submit" value="ADD CONTACT">
+            <input type="reset" value="RESET">
+
+        </form>
+    </div>
 	
 
 
