--- a/src/main/resources/templates/admin/add_contacts_admin.html
+++ b/src/main/resources/templates/admin/add_contacts_admin.html
@@ -74,8 +74,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             <label for="description">DESCRIPTION</label>
             <textarea id="description" name="description" rows="8" cols="50" placeholder="enter your description" required></textarea><br>
 
-           <!--   <label for="image">IMAGE</label>
-            <input type="file" id="image" name="image"><br>-->
+             <label for="image">IMAGE</label>
+            <input type="file" id="image" name="imageFile"><br>
 
             <input type="submit" value="ADD CONTACT">
             <input type="reset" value="RESET">
