sucessfully added image url in the sign up page and showed contacts in the view contacts page but not well designed

--- a/src/main/resources/templates/admin/add_contacts_admin.html
+++ b/src/main/resources/templates/admin/add_contacts_admin.html
@@ -80,7 +80,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 
 
             <label for="nickname">NICKNAME</label>
-            <input type="text" id="nickname" name="nickname" placeholder="enter your nickname" required><br>
+            <input type="text" id="nickname" name="nickName" placeholder="enter your nickname" required><br>
 
             <label for="work">WORK</label>
             <input type="text" id="work" name="work" placeholder="enter your work" required><br>
