--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -26,7 +26,7 @@
  			<span th:text = "${errorMessage}"></span>
     	</div>
 
-		<form th:action="@{/signup}" method="post" th:object="${user}">
+		<form th:action="@{/signup}" method="post" th:object="${user}"  enctype="multipart/form-data">
 			<label for="name">NAME </label> 
 			<input th:field="${user.name}"  type="text" id="name"
 				name="name" placeholder="enter your name" /><span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
@@ -45,12 +45,18 @@
 				rows="4"></textarea>
 				<span  th:if="${#fields.hasErrors('about')}" th:errors="*{about}"></span> 
 
-			<div class="input-container">
+			
+					
+				 <label for="image">IMAGE</label>
+            	<input type="file" id="image" name="imageUrl" required><br>
+					
+					
+				<div class="input-container">
             <input th:field="${user.enabled}" type="checkbox" id="acceptTerms" name="enabled" required>
              <label for="acceptTerms">I accept the terms and conditions</label>
              <span  th:if="${#fields.hasErrors('enabled')}" th:errors="*{enabled}"></span>
         	</div>
-
+        		
 				<input type="submit" value="Register"> 
 				<input type="reset" value="Reset">
 		</form>
