desingned the user  and admin view contacts page

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -61,6 +61,7 @@ nav {
 	position: absolute;
 	width: 1350px;*/
 	top: 0;
+	z-index:2;
 }
 
 
@@ -139,6 +140,7 @@ nav a:hover {
     transition: 0.3s;
    /* padding-top: 60px;*/
     padding-top: 50px;
+    z-index: 2;
     
 }
 
