--- a/src/main/resources/templates/user/view-contacts.html
+++ b/src/main/resources/templates/user/view-contacts.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" 
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
+<link href="../static/css/style2.css" th:href="@{/css/style2.css}" rel="stylesheet">
 </head>
 <body>
 
@@ -22,6 +23,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
      <span th:text="${userdetails.name}" class="user-name">John Doe</span> 
 </nav>
 
+<div class="container-wrapper">
 
   <div class="sidebar">
     <span class="close-btn" onclick="toggleSidebar()">×</span>
@@ -41,6 +43,36 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
  
 	</div>
 	
-<script src="/admin/js/script.js"></script>
+	<div class="container1">
+			
+			
+			
+			 <div th:each="contact : ${contacts}" class="card">
+            <!-- You can customize the card content based on your Contact entity -->
+            <div class="card-content">
+            <h3 th:text="${contact.name}"></h3>
+            <img th:src="@{/images/{imageName}(imageName=${contact.image})}" alt="Contact Image"/>
+            <div class="contact-info">
+            
+            <label for="image">CONTACT ID : </label><p th:text="${'CSMID' + contact.cid}"></p><br>
+            <label for="image">EMAIL : </label><p th:text="${contact.email}"></p><br>
+            
+            <label for="image">PHONE : </label><p th:text="${contact.phone}"></p><br>
+            <label for="image">WORK : </label><p th:text="${contact.work}"></p><br>
+            <label for="image">DESCRIPTION : </label><p th:text="${contact.description}"></p><br>
+            
+            </div>
+            
+            </div>
+            
+        </div>
+				
+		
+		</div>
+	
+	</div>
+	
+	
+<script src="/user/js/script.js"></script>
 </body>
 </html>
