--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -1,10 +1,15 @@
 .container1 {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between; /* Adjust as needed */
+            justify-content: space-evenly; /* Adjust as needed */
             margin-top:70px;
             
         }
+        
+.container1 p {
+	
+	font-size:20px;
+}
         
         .container-wrapper {
     		display: flex;
@@ -15,12 +20,12 @@
         	 background-color:   #EC8565;
             border: 1px solid #ddd;
             border-radius: 8px;
-            margin-right: 150px;
+            margin-right: 30px;
             margin-top:20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
            /* margin: 20px 0px;  Adjust margin as needed */
-            width: 425px;
+            width: 325px;
             /*background-color: #fff;*/
             transition: transform 0.3s ease-in-out;
             z-index: 1;
@@ -34,15 +39,17 @@
         /* Card content styling */
         .card-content {
         	align-items: center;
-            padding: 10px;
+            padding: 15px;
         }
 
         .card h3 {
             margin-top: 0;
         }
 
-        .card p {
+        .card i {
             margin: 0;
+            font-size:12px;
+            font-weight:bold;
         }
 
         .card img {
