--- a/src/main/resources/templates/admin/view-contacts.html
+++ b/src/main/resources/templates/admin/view-contacts.html
@@ -49,7 +49,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		<div class="container1">
 			
 			<div th:if="${contacts.isEmpty()}">
-			<p>nothing to show</p>
+			<p>Nothing to show, Try adding contacts</p>
 			
 			</div>
 			
